# phyelds

./: .flake8  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  README.md  package-lock.json  package.json  pyproject.toml  release.config.js
.github/workflows/: python-package.yml  release.yml  test.yml
src/: minimal_simulation.py
src/fieldpy/: __init__.py  example.py
src/fieldpy/abstractions/: __init__.py
src/fieldpy/calculus/: __init__.py  align.py
src/fieldpy/data/: __init__.py
src/fieldpy/internal/: __init__.py
src/fieldpy/libraries/: collect.py  diffusion.py  leader_election.py  spreading.py  time.py  utils.py
src/fieldpy/simulator/: __init__.py  actions.py  deployments.py  neighborhood.py  render.py  runner.py
src/phyelds/: __init__.py
src/phyelds/abstractions/: __init__.py
src/phyelds/calculus/: __init__.py
src/phyelds/calculus/internal/: __init__.py
src/phyelds/data/: __init__.py
src/phyelds/libraries/: collect.py  device.py  distances.py  gossip.py  leader_election.py  spreading.py  time.py  time_logic.py  utils.py
src/phyelds/simulator/: __init__.py  neighborhood.py  render.py  runner.py
src/phyelds/vm/internal/: __init__.py
src/tests/calculus/: bench_calculus.py  mock.py  test_neighbors.py  test_remember.py
src/tests/data/: test_field.py  test_neighborhood_field.py  test_state.py
src/tests/libraries/: simulator_utils.py  test_collect.py  test_device.py  test_distances.py  test_gossip.py  test_leader_election.py  test_spreading.py  test_time.py  test_utils.py
src/tests/simulator/: test_core.py  test_deployments.py  test_monitor.py  test_neighborhood.py  test_runner.py  test_vmas.py
