[project]
name = "fieldpy"
version = "0.1.0"
description = "A lightweight Python library to support aggregate computing!"
license = "Apache-2.0"
authors = [
    {name = "Davide Domini", email = "davide.domini@unibo.it"},
    {name = "Gianluca Aguzzi", email = "gianluca.aguzzi@unibo.it"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "wrapt (>=1.17.2,<1.18.0)",
    "matplotlib (>=3.10.1,<3.11.0)"
]

packages = [
    { include = "fieldpy", from = "src" },
]

classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pylint = "^3.0.0"
ruff = "^0.3.0"